@@ -7,6 +7,7 @@ Release Notes
 - disabled shellcheck warnings for $f evaluation because it is a literal used by muCommander
 - refactored the code a little
 - bundled HashGarten 0.17.0
+- added gnome-text-editor to the list of supported editors
 
 2.7.0, Apr 6, 2024
 - added support for muCommander 1.3.0+
